--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,9 @@
 	<nav class="nav nav-inline">
 		<a href="/themes" class="nav-link">Themes</a>
 		<a href="{{ site.docs_url }}" class="nav-link">Docs</a>
-		<a href="{{ site.gitter_url }}" class="nav-link">Gitter</a>
-		<a href="{{ site.github_url }}" class="nav-link">GitHub</a>
+		<a href="{{ site.patreon_url }}" class="nav-link">Sponsor</a>
+		<a href="{{ site.gitter_url }}" class="nav-link">Chat</a>
+		<a href="{{ site.github_url }}" class="nav-link">Code</a>
 		<a href="{{ site.producthunt_url }}" class="nav-link">Product Hunt</a>
 	</nav>
 	<p>Built by <a href="{{ site.creator_github_url }}">{{ site.creator_name }}</a> and <a href="{{ site.github_url }}/graphs/contributors">Contributors</a>. Code licensed <a href="{{ site.license_url }}">MIT</a>.</p>
