--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,11 +13,14 @@
           <li class="nav-item">
 						<a class="nav-item nav-link " href="{{ site.docs_url }}">Docs</a>
           </li>
-          <li class="nav-item">
-						<a class="nav-item nav-link " href="{{ site.gitter_url }}">Gitter</a>
+					<li class="nav-item">
+						<a class="nav-item nav-link" href="{{ site.patreon_url }}">Sponsor</a>
           </li>
           <li class="nav-item">
-						<a class="nav-item nav-link " href="{{ site.github_url }}">GitHub</a>
+						<a class="nav-item nav-link " href="{{ site.gitter_url }}">Chat</a>
+          </li>
+          <li class="nav-item">
+						<a class="nav-item nav-link " href="{{ site.github_url }}">Code</a>
           </li>
         </ul>
       </div>
