--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 					HTTP Prompt is an interactive command-line HTTP client featuring <em>autocomplete</em> and <em>syntax highlighting</em>.
 				</p>
 				<p class="lead">
-					<asciinema-player src="/asciicast.json" rows="16" cols="65" preload="1" loop="1" speed="1.5" poster="npt:20" font-size="medium" theme="monokai"></asciinema-player>
+					<asciinema-player src="/assets/cast/first-impression.json" rows="16" cols="65" preload="1" loop="1" speed="1.5" poster="npt:20" font-size="medium" theme="monokai"></asciinema-player>
 				</p>
 				<p class="lead btns">
 					<a href="#install" data-scroll class="btn btn-success btn-lg" id="main-install-btn">Install</a>
@@ -26,7 +26,7 @@
 	{% endif %}
 
 	<div id="content">
-		{{ page.content }}
+		{{ content }}
 	</div>
 
 	{% include footer.html %}
