--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,5 +17,7 @@
 
 	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=PT+Serif:400,400italic,700|PT+Sans:400">
 	<link rel="stylesheet" href="/assets/css/asciinema-player.css">
-	{% include analytics.html %}
+  {% if jekyll.environment == "production"  %}
+    {% include analytics.html %}
+  {% endif %}
 </head>
