--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -126,6 +126,23 @@ hr {
     text-align: center;
 }
 
+#content .article {
+
+}
+
+#content .article h1,
+#content .article h2 {
+    text-align: center;
+}
+
+#content .article h2 {
+    margin: 40px 0 20px;
+}
+
+.pricing {
+    margin-top: 30px;
+}
+
 #pip-install::before {
     content: "$ ";
     color: #888;
@@ -161,4 +178,76 @@ footer .nav {
 footer a:link,
 footer a:visited {
     color: #55595c;
+}
+
+rect.free {
+	fill: #fff;
+	stroke: #ccc;
+	stroke-width: 1;
+}
+
+rect.paid {
+	fill: #fff;
+	stroke: #5cb85c;
+	stroke-width: 1;
+}
+
+text {
+	font-family: Helvetica, Arial, sans-serif;
+}
+
+.bold {
+	font-weight: bold;
+	font-size: 24px;
+}
+
+.prev, .cur, .next {
+	fill: #444;
+	font-size: 20px;
+}
+
+.next {
+	opacity: 0;
+}
+
+.license {
+	fill: #888;
+	font-size: 16px;
+}
+
+.bill {
+    text-align: center;
+}
+.bill label {
+}
+.bill .btn-secondary.active {
+    background: #4cb84c;
+    color: #fff;
+    border: 1px solid #4cb84c;
+    font-weight: normal;
+}
+.bill .btn-secondary.active:hover {
+    background: #4ca84c;
+    color: #fff;
+    font-weight: normal;
+}
+.bill .btn-secondary {
+    background: #fff;
+    font-weight: normal;
+    color: #777;
+}
+.bill .btn-secondary:hover {
+    border: 1px solid #4cb84c;
+    background: #fff;
+    font-weight: normal;
+}
+
+.terms {
+    background: #f3f1f1;
+    padding: 20px;
+    margin: 30px 0 20px;
+    font-size: 18px;
+}
+.terms h2 {
+    margin-top: 20px !important;
 }
