--- a/_includes/checkout_form_dev.html
+++ b/_includes/checkout_form_dev.html
@@ -25,7 +25,7 @@
   <li>You are <b>NOT</b> allowed to redistribute nor share the package with any others.</li>
   <li>We'll do our best to maintain the software in good quality, but we are not liable for any damages done to your computers or systems.</li>
   <li>You may ask for a full refund within 14 days of purchase. After that, the payment is non-refundable. If you unsubscribe, the subscription will continue until the end of that month's (or year's, depending on your plan) billing period.</li>
-  <li>Read the full <a href="{{ site.comm_license_url  }}">End-User License Agreement</a> for more detail.</li>
+  <li>Read the full <a href="{{ site.comm_license_url  }}" target="_blank">End-User License Agreement</a> for more detail.</li>
 </ol>
 </div>
 
