--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 				<p class="lead btns">
 					<a href="#install" data-scroll class="btn btn-success btn-lg" id="main-install-btn">Install</a>
 					<a href="{{ site.docs_url }}" class="btn btn-secondary btn-lg" id="main-docs-btn">Documentation</a>
-					<iframe src="https://ghbtns.com/github-btn.html?user=eliangcs&repo=http-prompt&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px" class="ghbtn"></iframe>
+					<iframe src="https://ghbtns.com/github-btn.html?user=httpie&repo=http-prompt&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px" class="ghbtn"></iframe>
 					<!-- Place this tag where you want the button to render. -->
 				</p>
 			</div>
