Update chat link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 	<nav class="nav nav-inline">
 		<a href="/themes" class="nav-link">Themes</a>
 		<a href="{{ site.docs_url }}" class="nav-link">Docs</a>
-		<a href="{{ site.gitter_url }}" class="nav-link">Chat</a>
+		<a href="{{ site.gitter_url }}" class="nav-link">Discord</a>
 		<a href="{{ site.github_url }}" class="nav-link">Code</a>
 		<a href="{{ site.producthunt_url }}" class="nav-link">Product Hunt</a>
 	</nav>
