--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
 						<a class="nav-item nav-link " href="{{ site.docs_url }}">Docs</a>
           </li>
           <li class="nav-item">
-						<a class="nav-item nav-link " href="{{ site.gitter_url }}">Chat</a>
+						<a class="nav-item nav-link " href="{{ site.gitter_url }}">Discord</a>
           </li>
           <li class="nav-item">
 						<a class="nav-item nav-link " href="{{ site.github_url }}">Code</a>
